--- a/5_HU_Tipperlist_Frontend/angular.json
+++ b/5_HU_Tipperlist_Frontend/angular.json
@@ -20,9 +20,7 @@
             "outputPath": "dist/5-hu-tipperlist-frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": [ "zone.js", "src/linq.polyfill.ts" ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
