--- a/5_HU_Tipperlist_Frontend/tsconfig.app.json
+++ b/5_HU_Tipperlist_Frontend/tsconfig.app.json
@@ -6,7 +6,8 @@
     "types": []
   },
   "files": [
-    "src/main.ts"
+    "src/main.ts",
+    "src/linq.polyfill.ts"
   ],
   "include": [
     "src/**/*.d.ts"
